[package]
name = "arc-discharge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
futures-util = "0.3.26"
futures-io = "0.3.26"
core_affinity = "0.8.0"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
sharded-slab = "0.1.4"
pin-list = "0.1.0"
arrayvec = "0.7.2"
bytes = "1.4.0"

pin-lock = { git = "https://github.com/conradludgate/pin-lock" }
pin-queue = { git = "https://github.com/conradludgate/pin-queue" }
arc-dyn = { git = "https://github.com/conradludgate/arc-dyn" }

[dev-dependencies]
bytes = "1.0.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.0"
httpdate = "1.0"
tokio-util = { version = "0.7.0", features = ["full"] }
futures-util = { version = "0.3.26", features = ["sink"] }
